--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "gestorx-backend",
   "version": "1.0.0",
+  "description": "Backend do GestorX",
   "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "cors": "^2.8.5",
     "firebase-admin": "^11.10.1",
     "multer": "^1.4.5-lts.1",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "dotenv": "^16.3.1",
+    "body-parser": "^1.20.2"
   }
 }
